<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <!--group表示一个组，checkableBehavior的值为single表示，该组里面的元素只能单选-->
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_call"
            android:icon="@drawable/nav_call"
            android:title="@string/nav_callphone"/>

        <item
            android:id="@+id/nav_friends"
            android:icon="@drawable/nav_friends"
            android:title="@string/nav_friends"/>

        <item
            android:id="@+id/nav_location"
            android:icon="@drawable/nav_location"
            android:title="@string/nav_location"/>

        <item
            android:id="@+id/nav_mail"
            android:icon="@drawable/nav_mail"
            android:title="@string/nav_email"/>

        <item
            android:id="@+id/nav_task"
            android:icon="@drawable/nav_task"
            android:title="@string/nav_task"/>
    </group>

</menu>